# psurRegOSv1

./: .gitignore  .replit  AGENTS.md  CHANGELOG.md  CLAUDE.md  EVIDENCE_COVERAGE_REQUIREMENTS.md  FORMATTING_PRESERVATION_GUIDE.json  FormQAR-054_SLOT_TEMPLATE.docx  FormQAR-054_Template_Schema.json  FormQAR-054_ULTRA_GRANULAR_COMPLETE.docx  SLOT_MAPPING_GUIDE.json  ULTRA_GRANULAR_SLOT_MAPPING.json  claude.md  design_guidelines.md  evidence_mapping_rationalized.md  mdcg_template  package-lock.json  package.json  psur_enhancement_recommendations.md  pyproject.toml  replit.md  startup_log.txt  tailwind.config.ts  vite.config.ts
client/: index.html
psur_orchestrator/: README.md  psur_orchestrator.db  pyproject.toml
psur_orchestrator/psur_orchestrator/: __init__.py  cli.py
psur_orchestrator/psur_orchestrator/core/: __init__.py  adjudication.py  qualification.py  renderer_stub.py  trace.py  types.py
psur_orchestrator/psur_orchestrator/data/mappings/: mapping_formqar054_to_obligations.json  (+1 more)
psur_orchestrator/psur_orchestrator/dsl/: __init__.py  ast.py  compiler.py  grammar.lark  parser.py
psur_orchestrator/psur_orchestrator/rules/: __init__.py  checks.py  engine.py  registry.py
psur_orchestrator/psur_orchestrator/schemas/: psur_slots.formqar054.schema.json  psur_slots.mdcg_annexI.schema.json
psur_orchestrator/psur_orchestrator/storage/: migrations.py  models.py
psur_orchestrator/tests/: __init__.py  test_adjudication_accept.py  test_adjudication_reject.py  test_dsl_compile.py  test_template_qualification.py  test_time_contiguity.py  test_trace_atomicity.py
(+270 files in other folders)
