[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psur-orchestrator"
version = "0.1.0"
description = "DSL-first PSUR Compliance Orchestrator for medical device regulatory compliance"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "lark>=1.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.0.270",
]

[project.scripts]
psur = "psur_orchestrator.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["psur_orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 100
target-version = "py311"
